wip: Port to Java